功能开发完成

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <iframe  src="http://localhost:17680/h5/#/" style=" width:800px; height:550px; border: none;"></iframe>
+    <iframe  src="http://localhost:17680/h5/#/" style=" width:100%; height:99vh; border: none;"></iframe>
     <webview></webview>
   </body>
 </html>
